--- a/style.css
+++ b/style.css
@@ -3,20 +3,22 @@ body {
     padding: 0;
     display: flex;
     min-height: 100vh;
+    font-family: 'Montserrat', sans-serif;
 }
 
 header {
-    background-color: #333;
+    background-color: #21232d;
     color: white;
     padding: 0;
     width: 200px;
+    text-align: left;
 }
 
 main {
 
     flex: 1;
     padding: 0px;
-    background-color: #DAdCDb;
+    background-color: #e6e8ed;
 
 }
 
@@ -33,65 +35,140 @@ section {
 }
 
 nav {
-    background-color: #444;
-    color: white;
+    background-color: #21232d;
+    color: #ffffff;
     padding: 10px;
 }
 
 h1 {
     text-align: center;
     margin-top: 0;
-    border-bottom: 2px solid black;
+    border-bottom: 1px solid #666666;
     padding-bottom: 1%;
     padding-top: 1%;
-    background-color: #ebe7df;
+    background-color: #ffffff;
+    color: #666666;
 }
-h3{
+
+h3 {
     text-align: center;
     font-size: 130%;
-    margin-top: 5%;
+    margin-top: 2%;
+    color: #666666;
+}
+
+#nom_site {
+    color: #9799ab;
+    font-size: 25px;
 }
 
 ul {
     list-style: none;
+    color: #9799ab;
 }
 
 nav > ul > li {
     padding-top: 30%;
     font-size: 130%;
 }
+
 .valeur{
-    border: 2px solid black;
     padding-top: 0%;
-    padding-left: 0%;
-    padding-right: 3%;
-    padding-bottom: 3%;
-    background-color: #ebe7df;
+    padding-left: 1%;
+    padding-right: 1%;
+    padding-bottom: 4%;
+    background-color: #ffffff;
+    border-radius: 5%;
+    color: #666666;
 }
+
 #donnee{
     display: flex;
     justify-content: space-around;
     padding-top:3% ;
+    margin-top: -3%;
+    margin-right: 3%;
 }
+
 #historique{
     display: flex;
     justify-content: space-around;
     padding-top:3% ;
+    margin-top: -3%;
+    margin-right: 3%;
+    margin-bottom: -1%;
 }
+
 .jour{
-    border: 2px solid black ;
     padding-top: 0%;
-    padding-left: 0%;
-    padding-right: 5%;
-    padding-bottom: 5%;
-    background-color: #ebe7df;
+    padding-left: 3%;
+    padding-right: 3%;
+    padding-bottom: 4%;
+    background-color: #ffffff;
+    border-radius: 5%;
+    color: #666666;
 }
+
 #img{
     text-align: center;
 }
-@media screen and (max-width: 600px) {
-    /* Modifier les styles pour les écrans de 600px de largeur ou moins */
-    body {
-      color: red; /* Modifier le padding pour s'adapter à des écrans plus petits */
+
+.graphs {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 20px;
+    margin-top: 3%;
+    margin-left: 1%;
+    margin-right: 1%;
+    border-top: 2px solid #666666;
+}
+
+.graphs-card {
+    background-color: #ffffff;
+    margin-bottom: 12px;
+    margin-top: 5%;
+    box-sizing: border-box;
+    -webkit-column-break-inside: avoid;
+    border-radius: 5px;
+    box-shadow: 0 6px 7px -4px rgba(0, 0, 0, 0.2);
+}
+
+.graphs-title {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 22px;
+    font-weight: 600;
+    color: #666666;
+}
+
+
+/* --- responsive --- */
+
+@media screen and (max-width: 1200px) {
+    section {
+        width: 100%;
     }
-  }
+
+    .graphs {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+}
+
+@media screen and (max-width: 650px) {
+
+    section {
+        width: 100%;
+    }
+
+    header {
+        width: 20%; 
+        font-size: 12px;
+    }
+
+    #nom_site {
+        font-size: 14px;
+    }
+}
