--- a/style.css
+++ b/style.css
@@ -141,7 +141,9 @@ nav > ul > li {
     font-weight: 600;
     color: #666666;
 }
-
+#humidite , #pression , #temp{
+    text-align: center;
+}
 
 /* --- responsive --- */
 
